--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,6 @@
     <color name="background_gray">#F5F5F5</color>
     <color name="card_background">#FFFFFF</color>
     <color name="text_primary">#212121</color>
-    <color name="text_secondary">#FFFFFF</color>
+    <color name="text_secondary">#757575</color>
     <color name="divider">#E0E0E0</color>
 </resources>
