更改报警类型排行为条形图&报警状态快捷更改

--- a/app/src/main/res/layout/card_chart_pie2.xml
+++ b/app/src/main/res/layout/card_chart_pie2.xml
@@ -43,7 +43,7 @@
                     android:id="@+id/tv_time_one_week"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="一周"
+                    android:text="@string/time_one_week"
                     android:textColor="@color/text_secondary"
                     android:textSize="12sp"
                     android:padding="8dp" />
@@ -52,7 +52,7 @@
                     android:id="@+id/tv_time_one_month"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="一月"
+                    android:text="@string/time_one_month"
                     android:textColor="@color/text_secondary"
                     android:textSize="12sp"
                     android:padding="8dp" />
