--- a/app/src/main/res/layout/item_alarm_card.xml
+++ b/app/src/main/res/layout/item_alarm_card.xml
@@ -79,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
+            android:gravity="center"
             android:background="@drawable/bg_status_badge"
             android:paddingHorizontal="10dp"
             android:paddingVertical="4dp"
