--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -86,6 +86,13 @@
         android:visibility="gone"
         android:orientation="vertical"
         android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="未查询到报警信息"
+            android:textSize="16sp"
+            android:textColor="#999999" />
     </LinearLayout>
 
 </LinearLayout>
