--- a/app/src/main/res/layout/item_device_list.xml
+++ b/app/src/main/res/layout/item_device_list.xml
@@ -70,17 +70,6 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <TextView
-            android:id="@+id/item_algo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="算法服务器: SVR-01"
-            android:textSize="13sp"
-            android:textColor="#666666"
-            app:layout_constraintStart_toStartOf="@id/guideline_item_center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/item_area" />
-
-        <TextView
             android:id="@+id/item_alarm"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -90,7 +79,7 @@
             android:textColor="#666666"
             app:layout_constraintStart_toStartOf="@id/guideline_item_center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/item_algo"/>
+            app:layout_constraintTop_toTopOf="@+id/item_area"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
