--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +30,7 @@
             android:iconifiedByDefault="false"
             android:queryBackground="@null"
             android:submitBackground="@null"
-            android:queryHint="搜索设备名称/位置..."
+            android:queryHint="搜索区域 / 设备名 / ID"
             android:searchIcon="@drawable/ic_search" />
 
         <LinearLayout
@@ -49,7 +50,7 @@
                 android:layout_height="22dp"
                 android:src="@drawable/ic_filter"
                 android:contentDescription="筛选"
-                android:tint="@color/primary_blue_dark" />
+                app:tint="@color/primary_blue_dark" />
 
             <TextView
                 android:layout_width="wrap_content"
